# OS

Lab1/: CMakeLists.txt  main.c
Lab1/include/: bfunction.h  ffunction.h  fgfunctions.h  gfunction.h  manager.h
Lab1/src/: bfunction.c  ffunction.c  fgfunctions.c  gfunction.c  manager.c
